--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Resume</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
+
 <body>
 
+<header class="s-header">
+
+    <div class="header-logo">
+        <a href="#0">resume</a>
+    </div>
+
+    <nav class="header-nav-wrap">
+        <ul class="header-main-nav">
+            <li class="current"><a class="smoothscroll" href="#intro" title="intro">Intro</a></li>
+            <li><a class="smoothscroll" href="#about" title="about">About</a></li>
+            <li><a class="smoothscroll" href="#services" title="services">Services</a></li>
+            <li><a class="smoothscroll" href="#works" title="works">Works</a></li>
+            <li><a class="smoothscroll" href="#contact" title="contact us">Say Hello</a></li>
+        </ul>
+
+        <ul class="header-social">
+            <li><a href="#0"><i class="fab fa-vk" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/xcvtt/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+            <li><a href="https://t.me/xcvtt"><i class="fab fa-telegram-plane" aria-hidden="true"></i></a></li>
+            <li><a href="https://github.com/exclide"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+        </ul>
+    </nav>
+
+    <a class="header-menu-toggle" href="#"><span>Menu</span></a>
+
+</header>
+
 </body>
+
+
 </html>
