add main/about section && responsive media

--- a/index.html
+++ b/index.html
@@ -39,6 +39,32 @@
 
 </header>
 
+<section id="intro" class="s-intro target-section">
+
+    <div class="row intro-content">
+
+        <div class="column large-9 mob-full intro-text">
+            <h3>Hello, I'm Greg Mhitarian</h3>
+            <h1>
+                Backend Developer <br>
+                # St. Petersburg <br>
+                @ ITMO University
+            </h1>
+        </div>
+
+        <div class="intro-scroll">
+            <a href="#about" class="intro-scroll-link smoothscroll">
+                Scroll For More
+            </a>
+        </div>
+
+        <div class="intro-grid"></div>
+        <div class="intro-pic"></div>
+
+    </div> <!-- end row -->
+
+</section> <!-- end intro -->
+
 </body>
 
 
