--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" style="filter: invert(42%)" href="/images/godfather_logo.jpg" type="image/svg+xml">
 </head>
 
 
@@ -65,7 +66,69 @@
 
 </section> <!-- end intro -->
 
+
+<section id="about" class="s-about target-section">
+
+    <div class="row about-content">
+        <div class="table-responsive">
+
+            <table>
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Sex</th>
+                    <th>Location</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Naruto Uzumaki</td>
+                    <td>16</td>
+                    <td>Male</td>
+                    <td>Konoha</td>
+                </tr>
+                <tr>
+                    <td>Sakura Haruno</td>
+                    <td>16</td>
+                    <td>Female</td>
+                    <td>Konoha</td>
+                </tr>
+                <tr>
+                    <td>Sakura Haruno</td>
+                    <td>16</td>
+                    <td>Female</td>
+                    <td>Konoha</td>
+                </tr>
+                <tr>
+                    <td>Sakura Haruno</td>
+                    <td>16</td>
+                    <td>Female</td>
+                    <td>Konoha</td>
+                </tr>
+                <tr>
+                    <td>Sakura Haruno</td>
+                    <td>16</td>
+                    <td>Female</td>
+                    <td>Konoha</td>
+                </tr>
+                <tr>
+                    <td>Sakura Haruno</td>
+                    <td>16</td>
+                    <td>Female</td>
+                    <td>Konoha</td>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+</section>
+
+<script src="js/main.js"></script>
+
 </body>
 
+<script src="js/main.js"></script>
 
 </html>
