--- a/index.html
+++ b/index.html
@@ -83,40 +83,40 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>Naruto Uzumaki</td>
-                    <td>16</td>
+                    <td>Vito Corleone</td>
+                    <td>60</td>
                     <td>Male</td>
-                    <td>Konoha</td>
+                    <td>Italy</td>
                 </tr>
                 <tr>
-                    <td>Sakura Haruno</td>
-                    <td>16</td>
-                    <td>Female</td>
-                    <td>Konoha</td>
+                    <td>Michael Corleone</td>
+                    <td>31</td>
+                    <td>Male</td>
+                    <td>Italy</td>
                 </tr>
                 <tr>
-                    <td>Sakura Haruno</td>
-                    <td>16</td>
-                    <td>Female</td>
-                    <td>Konoha</td>
+                    <td>Vito Corleone</td>
+                    <td>60</td>
+                    <td>Male</td>
+                    <td>Italy</td>
                 </tr>
                 <tr>
-                    <td>Sakura Haruno</td>
-                    <td>16</td>
-                    <td>Female</td>
-                    <td>Konoha</td>
+                    <td>Michael Corleone</td>
+                    <td>31</td>
+                    <td>Male</td>
+                    <td>Italy</td>
                 </tr>
                 <tr>
-                    <td>Sakura Haruno</td>
-                    <td>16</td>
-                    <td>Female</td>
-                    <td>Konoha</td>
+                    <td>Vito Corleone</td>
+                    <td>60</td>
+                    <td>Male</td>
+                    <td>Italy</td>
                 </tr>
                 <tr>
-                    <td>Sakura Haruno</td>
-                    <td>16</td>
-                    <td>Female</td>
-                    <td>Konoha</td>
+                    <td>Michael Corleone</td>
+                    <td>31</td>
+                    <td>Male</td>
+                    <td>Italy</td>
                 </tr>
                 </tbody>
             </table>
@@ -125,10 +125,7 @@
     </div>
 </section>
 
-<script src="js/main.js"></script>
 
 </body>
-
-<script src="js/main.js"></script>
 
 </html>
