--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
     </div>
 </section>
 
+<section id="services" class="s-services target-section">
+    <div class="row services-content">
+        <div class="services-text">
+            <h1>Шел медведь по лесу</h1> <br>
+            <h1>Увидел машину</h1> <br>
+            <h1>Сел в нее и сгорел</h1>
+        </div>
+    </div>
+</section>
 
 </body>
 
