--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" style="filter: invert(42%)" href="/images/godfather_logo.jpg" type="image/svg+xml">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 </head>
 
 
