--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
     <nav class="header-nav-wrap">
         <ul class="header-main-nav">
-            <li class="current"><a class="smoothscroll" href="#intro" title="intro">Intro</a></li>
-            <li><a class="smoothscroll" href="#about" title="about">About</a></li>
-            <li><a class="smoothscroll" href="#services" title="services">Services</a></li>
-            <li><a class="smoothscroll" href="#works" title="works">Works</a></li>
-            <li><a class="smoothscroll" href="#contact" title="contact us">Say Hello</a></li>
+            <li class="current"><a href="#intro" title="intro">Intro</a></li>
+            <li><a href="#about" title="about">About</a></li>
+            <li><a href="#services" title="services">Services</a></li>
+            <li><a href="#works" title="works">Works</a></li>
+            <li><a href="#contact" title="contact us">Say Hello</a></li>
         </ul>
 
         <ul class="header-social">
@@ -44,7 +44,7 @@
 
 </header>
 
-<section id="intro" class="s-intro target-section">
+<section id="intro" class="s-intro">
 
     <div class="row intro-content">
 
@@ -58,7 +58,7 @@
         </div>
 
         <div class="intro-scroll">
-            <a href="#about" class="intro-scroll-link smoothscroll">
+            <a href="#about" class="intro-scroll-link">
                 Scroll For More
             </a>
         </div>
@@ -71,7 +71,7 @@
 </section> <!-- end intro -->
 
 
-<section id="about" class="s-about target-section">
+<section id="about" class="s-about">
 
     <div class="row about-content">
         <div class="table-responsive">
@@ -129,7 +129,7 @@
     </div>
 </section>
 
-<section id="services" class="s-services target-section">
+<section id="services" class="s-services">
     <div class="row services-content">
         <div class="services-text">
             <h1>Шел медведь по лесу</h1> <br>
@@ -137,6 +137,11 @@
             <h1>Сел в нее и сгорел</h1>
         </div>
     </div>
+</section>
+
+
+<section id="works" class="s-works">
+
 </section>
 
 </body>
