--- a/index.html
+++ b/index.html
@@ -137,10 +137,48 @@
             <h1>Сел в нее и сгорел</h1>
         </div>
     </div>
+
 </section>
 
 
 <section id="works" class="s-works">
+    <div class="row works-content">
+        <div class="column">
+            <h2>test</h2>
+        </div>
+        <div class="column">
+            <h2>test</h2>
+        </div>
+        <div class="column">
+            <h2>test</h2>
+        </div>
+
+    </div>
+
+    <div class="row works-content">
+        <div class="column">
+            <h2>test</h2>
+        </div>
+        <div class="column">
+            <h2>test</h2>
+        </div>
+        <div class="column">
+            <h2>test</h2>
+        </div>
+
+    </div>
+
+    <div class="row works-content">
+        <div class="column">
+            <p>Now you come and say "Don Corleone, give me justice." But you don't ask with respect.</p>
+        </div>
+        <div class="column">
+            <p>You don't offer friendship. You don't even think to call me "Godfather."</p>
+        </div>
+        <div class="column">
+            <p>You come into my house on the day my daughter is to be married and you ask me to do murder - for money.</p>
+        </div>
+    </div>
 
 </section>
 
