fix flex align center/start

--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
     </div>
 
     <div class="row works-content">
-        <div class="column">
+        <div class="column align-y-top">
             <p>Now you come and say "Don Corleone, give me justice." But you don't ask with respect.</p>
         </div>
-        <div class="column">
+        <div class="column align-y-top">
             <p>You don't offer friendship. You don't even think to call me "Godfather."</p>
         </div>
-        <div class="column">
+        <div class="column align-y-top">
             <p>You come into my house on the day my daughter is to be married and you ask me to do murder - for money.</p>
         </div>
     </div>
