--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 
 <section id="services" class="s-services">
     <div class="row services-content">
-        <div class="services-text">
-            <h1>Шел медведь по лесу</h1> <br>
-            <h1>Увидел машину</h1> <br>
+        <div class="column services-text">
+            <h1>Шел медведь по лесу</h1>
+            <h1>Увидел машину</h1>
             <h1>Сел в нее и сгорел</h1>
         </div>
     </div>
