--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#about" title="about">About</a></li>
             <li><a href="#services" title="services">Services</a></li>
             <li><a href="#works" title="works">Works</a></li>
-            <li><a href="#contact" title="contact us">Say Hello</a></li>
+            <li><a href="sayhello.html" title="contact us">Say Hello</a></li>
         </ul>
 
         <ul class="header-social">
