--- a/sayhello.html
+++ b/sayhello.html
@@ -2,13 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Say Hello</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 </head>
 <body>
+
+<header class="s-header">
+
+    <div class="header-logo">
+        <a href="#0">resume</a>
+    </div>
+
+    <nav class="header-nav-wrap">
+        <ul class="header-main-nav">
+            <li><a href="index.html" title="intro">Intro</a></li>
+            <li><a href="#about" title="about">About</a></li>
+            <li><a href="#services" title="services">Services</a></li>
+            <li><a href="#works" title="works">Works</a></li>
+            <li class="current"><a href="sayhello.html" title="contact us">Say Hello</a></li>
+        </ul>
+
+        <ul class="header-social">
+            <li><a href="#0"><i class="fab fa-vk" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/xcvtt/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+            <li><a href="https://t.me/xcvtt"><i class="fab fa-telegram-plane" aria-hidden="true"></i></a></li>
+            <li><a href="https://github.com/exclide"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+        </ul>
+    </nav>
+
+    <a class="header-menu-toggle" href="#"><span>Menu</span></a>
+
+</header>
 
 <div class="imageContainer">
     <h1>
