add active menu class js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <script src="js/speed.js" defer></script>
+    <script src="js/active.js" defer></script>
 </head>
 
 
@@ -26,7 +27,7 @@
 
     <nav class="header-nav-wrap">
         <ul class="header-main-nav">
-            <li class="current"><a href="#intro" title="intro">Intro</a></li>
+            <li><a href="index.html" title="intro">Intro</a></li>
             <li><a href="#about" title="about">About</a></li>
             <li><a href="#services" title="services">Services</a></li>
             <li><a href="#works" title="works">Works</a></li>
