--- a/form.html
+++ b/form.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Список предметов и дедлайнов</title>
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/form.css">
+    <script src="js/form.js"></script>
+    <script src="js/speed.js" defer></script>
+    <script src="js/active.js" defer></script>
 </head>
 <body>
+
+<header class="s-header">
+
+    <div class="header-logo">
+        <a href="#0">resume</a>
+    </div>
+
+    <nav class="header-nav-wrap">
+        <ul class="header-main-nav">
+            <li><a href="index.html" title="intro">Intro</a></li>
+            <li><a href="#about" title="about">About</a></li>
+            <li><a href="#services" title="services">Services</a></li>
+            <li><a href="form.html" title="form">Form</a></li>
+            <li><a href="sayhello.html" title="contact us">Say Hello</a></li>
+        </ul>
+
+        <ul class="header-social">
+            <li><a href="#0"><i class="fab fa-vk" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/xcvtt/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+            <li><a href="https://t.me/xcvtt"><i class="fab fa-telegram-plane" aria-hidden="true"></i></a></li>
+            <li><a href="https://github.com/exclide"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+        </ul>
+    </nav>
+
+    <a class="header-menu-toggle" href="#"><span>Menu</span></a>
+
+</header>
+
 <div class="container">
     <h1>Список предметов и дедлайнов</h1>
 
@@ -23,7 +56,6 @@
     <div id="deadlineList"></div>
 </div>
 
-<script src="js/form.js"></script>
 </body>
 </html>
 
