--- a/sayhello.html
+++ b/sayhello.html
@@ -28,7 +28,7 @@
             <li><a href="index.html" title="intro">Intro</a></li>
             <li><a href="#about" title="about">About</a></li>
             <li><a href="#services" title="services">Services</a></li>
-            <li><a href="#works" title="works">Works</a></li>
+            <li><a href="form.html" title="form">Form</a></li>
             <li><a href="sayhello.html" title="contact us">Say Hello</a></li>
         </ul>
 
