--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul class="header-main-nav">
             <li><a href="index.html" title="intro">Intro</a></li>
             <li><a href="#about" title="about">About</a></li>
-            <li><a href="#services" title="services">Services</a></li>
+            <li><a href="json.html" title="forum">Forum</a></li>
             <li><a href="form.html" title="form">Form</a></li>
             <li><a href="sayhello.html" title="contact us">Say Hello</a></li>
         </ul>
