--- a/sayhello.html
+++ b/sayhello.html
@@ -26,7 +26,7 @@
     <nav class="header-nav-wrap">
         <ul class="header-main-nav">
             <li><a href="index.html" title="intro">Intro</a></li>
-            <li><a href="#about" title="about">About</a></li>
+            <li><a href="modal.html" title="about">Modal</a></li>
             <li><a href="json.html" title="forum">Forum</a></li>
             <li><a href="form.html" title="form">Form</a></li>
             <li><a href="sayhello.html" title="contact us">Say Hello</a></li>
